--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             <section class="hero-section">
                 <div class="hero-image-wrapper">
-                    <img src="assets/hero-edlp.jpg" alt="Estudiantes de La Plata" class="hero-img">
+                    <img src="https://picsum.photos/id/1059/1200/800" alt="Estadio de noche" class="hero-img">
                     <div class="hero-overlay">
                         <span class="tag red-tag">COPA LIBERTADORES</span>
                         <h1>NOCHE DE COPA EN UNO: EL PINCHA SUEÑA</h1>
@@ -49,21 +49,21 @@
                 <div class="video-grid">
                     <article class="video-card">
                         <div class="thumbnail-wrapper">
-                            <img src="assets/thumb1.jpg" alt="EDLP vs Gremio">
+                            <img src="https://picsum.photos/id/1015/600/400" alt="Partido de fútbol">
                             <div class="play-icon">▶</div>
                         </div>
                         <h4>EDLP vs Gremio</h4>
                     </article>
                     <article class="video-card">
                         <div class="thumbnail-wrapper">
-                            <img src="assets/thumb2.jpg" alt="CABJ vs RIV">
+                            <img src="https://picsum.photos/id/1040/600/400" alt="Jugadores celebrando">
                             <div class="play-icon">▶</div>
                         </div>
                         <h4>CABJ vs RIV</h4>
                     </article>
                     <article class="video-card">
                         <div class="thumbnail-wrapper">
-                            <img src="assets/thumb3.jpg" alt="GELP vs Huracán">
+                            <img src="https://picsum.photos/id/1058/600/400" alt="Hinchada">
                             <div class="play-icon">▶</div>
                         </div>
                         <h4>GELP vs Huracán</h4>
@@ -75,7 +75,7 @@
                 <h3 class="section-title">NOTICIAS DESTACADAS</h3>
                 <div class="news-grid">
                     <article class="news-card">
-                        <img src="assets/news1.jpg" alt="Noticia 1" class="news-img">
+                        <img src="https://picsum.photos/id/1069/400/300" alt="Entrenamiento" class="news-img">
                         <div class="news-content">
                             <h4>Mercado de pases: Altas y bajas</h4>
                             <a href="#" class="btn-read-more">Leer más</a>
@@ -83,7 +83,7 @@
                     </article>
                     <article class="news-card editorial">
                         <div class="editorial-img-wrapper">
-                            <img src="assets/microfono-editorial.png" alt="Editorial" class="news-img illustration">
+                            <img src="https://picsum.photos/id/1011/400/300" alt="Micrófono de radio" class="news-img illustration">
                         </div>
                         <div class="news-content">
                             <h4>Opinión: El rol de las SAD</h4>
@@ -91,7 +91,7 @@
                         </div>
                     </article>
                     <article class="news-card">
-                        <img src="assets/news2.jpg" alt="Noticia 2" class="news-img">
+                        <img src="https://picsum.photos/id/1080/400/300" alt="Fútbol juvenil" class="news-img">
                         <div class="news-content">
                             <h4>La reserva gana y gusta</h4>
                             <a href="#" class="btn-read-more">Leer más</a>
@@ -104,19 +104,19 @@
                 <h3 class="section-title">LOS RELATOS DEL FIN DE SEMANA <span class="social-icon">Instagram</span></h3>
                 <div class="insta-grid">
                     <div class="insta-item">
-                        <img src="assets/reel1.jpg" alt="Reel">
+                        <img src="https://picsum.photos/id/117/300/500" alt="Reel vertical">
                         <div class="mini-play">▶</div>
                     </div>
                     <div class="insta-item">
-                        <img src="assets/reel2.jpg" alt="Reel">
+                        <img src="https://picsum.photos/id/152/300/500" alt="Reel vertical">
                         <div class="mini-play">▶</div>
                     </div>
                     <div class="insta-item">
-                        <img src="assets/reel3.jpg" alt="Reel">
+                        <img src="https://picsum.photos/id/160/300/500" alt="Reel vertical">
                         <div class="mini-play">▶</div>
                     </div>
                     <div class="insta-item">
-                        <img src="assets/reel4.jpg" alt="Reel">
+                        <img src="https://picsum.photos/id/177/300/500" alt="Reel vertical">
                         <div class="mini-play">▶</div>
                     </div>
                 </div>
@@ -148,21 +148,21 @@
                 <h3 class="sidebar-title">LO ÚLTIMO EN VIVO</h3>
                 <ul class="sidebar-news-list">
                     <li class="sidebar-news-item">
-                        <img src="assets/thumb-side1.jpg" alt="Thumb">
+                        <img src="https://picsum.photos/id/1025/100/100" alt="Thumb táctico">
                         <div class="info">
                             <h5>Post partido: Análisis táctico</h5>
                             <span>Hace 2 horas</span>
                         </div>
                     </li>
                     <li class="sidebar-news-item">
-                        <img src="assets/thumb-side2.jpg" alt="Thumb">
+                        <img src="https://picsum.photos/id/1062/100/100" alt="Thumb conferencia">
                         <div class="info">
                             <h5>Conferencia de prensa Domínguez</h5>
                             <span>Ayer</span>
                         </div>
                     </li>
                     <li class="sidebar-news-item">
-                        <img src="assets/thumb-side3.jpg" alt="Thumb">
+                        <img src="https://picsum.photos/id/1074/100/100" alt="Thumb estadio">
                         <div class="info">
                             <h5>La previa desde el estadio</h5>
                             <span>Ayer</span>
