--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="#" class="active">INICIO</a></li>
-                    <li><a href="#">NOTICIAS</a></li>
-                    <li><a href="#">TRANSMISIONES</a></li>
-                    <li><a href="#">ENTREVISTAS</a></li>
+                    <li><a href="#noticias">NOTICIAS</a></li>
+                    <li><a href="#transmisiones">TRANSMISIONES</a></li>
+                    <li><a href="#entrevistas">ENTREVISTAS</a></li>
                 </ul>
             </nav>
             <button class="btn-live">EN VIVO</button>
@@ -44,7 +44,7 @@
                 </div>
             </section>
 
-            <section class="section-block">
+            <section id="transmisiones" class="section-block">
                 <h3 class="section-title">ÚLTIMAS TRANSMISIONES</h3>
                 <div class="video-grid">
                     <article class="video-card">
@@ -71,7 +71,7 @@
                 </div>
             </section>
 
-            <section class="section-block">
+            <section id="noticias" class="section-block">
                 <h3 class="section-title">NOTICIAS DESTACADAS</h3>
                 <div class="news-grid">
                     <article class="news-card">
@@ -100,7 +100,7 @@
                 </div>
             </section>
 
-            <section class="section-block">
+            <section id="entrevistas" class="section-block">
                 <h3 class="section-title">LOS RELATOS DEL FIN DE SEMANA <span class="social-icon">Instagram</span></h3>
                 <div class="insta-grid">
                     <div class="insta-item">
@@ -108,81 +108,4 @@
                         <div class="mini-play">▶</div>
                     </div>
                     <div class="insta-item">
-                        <img src="https://picsum.photos/id/152/300/500" alt="Reel vertical">
-                        <div class="mini-play">▶</div>
-                    </div>
-                    <div class="insta-item">
-                        <img src="https://picsum.photos/id/160/300/500" alt="Reel vertical">
-                        <div class="mini-play">▶</div>
-                    </div>
-                    <div class="insta-item">
-                        <img src="https://picsum.photos/id/177/300/500" alt="Reel vertical">
-                        <div class="mini-play">▶</div>
-                    </div>
-                </div>
-            </section>
-
-        </main>
-
-        <aside class="sidebar-right">
-            
-            <div class="sidebar-card">
-                <h3 class="sidebar-title">PRÓXIMOS PARTIDOS</h3>
-                <ul class="match-list">
-                    <li class="match-item">
-                        <div class="teams">EDLP vs Gremio</div>
-                        <div class="date">Mar 21:00 <span class="live-dot"></span></div>
-                    </li>
-                    <li class="match-item">
-                        <div class="teams">GELP vs Boca</div>
-                        <div class="date">Dom 17:00</div>
-                    </li>
-                    <li class="match-item">
-                        <div class="teams">Defensa vs Lanús</div>
-                        <div class="date">Lun 19:30</div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="sidebar-card">
-                <h3 class="sidebar-title">LO ÚLTIMO EN VIVO</h3>
-                <ul class="sidebar-news-list">
-                    <li class="sidebar-news-item">
-                        <img src="https://picsum.photos/id/1025/100/100" alt="Thumb táctico">
-                        <div class="info">
-                            <h5>Post partido: Análisis táctico</h5>
-                            <span>Hace 2 horas</span>
-                        </div>
-                    </li>
-                    <li class="sidebar-news-item">
-                        <img src="https://picsum.photos/id/1062/100/100" alt="Thumb conferencia">
-                        <div class="info">
-                            <h5>Conferencia de prensa Domínguez</h5>
-                            <span>Ayer</span>
-                        </div>
-                    </li>
-                    <li class="sidebar-news-item">
-                        <img src="https://picsum.photos/id/1074/100/100" alt="Thumb estadio">
-                        <div class="info">
-                            <h5>La previa desde el estadio</h5>
-                            <span>Ayer</span>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="ad-space">
-                <p>ESPACIO PUBLICITARIO</p>
-            </div>
-
-        </aside>
-
-    </div>
-
-    <footer class="main-footer">
-        <p>&copy; 2025 Táctico Play. Medio periodístico aliado a FM Alta Voz 98.7 – La Plata, Argentina.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                        <img src="
