--- a/index.html
+++ b/index.html
@@ -45,31 +45,41 @@
             </section>
 
             <section id="transmisiones" class="section-block">
-                <h3 class="section-title">ÚLTIMAS TRANSMISIONES</h3>
-                <div class="video-grid">
-                    <article class="video-card">
-                        <div class="thumbnail-wrapper">
-                            <img src="https://picsum.photos/id/1015/600/400" alt="Partido de fútbol">
-                            <div class="play-icon">▶</div>
-                        </div>
-                        <h4>EDLP vs Gremio</h4>
-                    </article>
-                    <article class="video-card">
-                        <div class="thumbnail-wrapper">
-                            <img src="https://picsum.photos/id/1040/600/400" alt="Jugadores celebrando">
-                            <div class="play-icon">▶</div>
-                        </div>
-                        <h4>CABJ vs RIV</h4>
-                    </article>
-                    <article class="video-card">
-                        <div class="thumbnail-wrapper">
-                            <img src="https://picsum.photos/id/1058/600/400" alt="Hinchada">
-                            <div class="play-icon">▶</div>
-                        </div>
-                        <h4>GELP vs Huracán</h4>
-                    </article>
+    <h3 class="section-title">ÚLTIMAS TRANSMISIONES</h3>
+    <div class="video-grid">
+        
+        <article class="video-card">
+            <a href="https://youtu.be/rGTwyI89PWI?si=pDeX72ExIsp6jgCv" target="_blank">
+                <div class="thumbnail-wrapper">
+                    <img src="https://picsum.photos/id/1015/600/400" alt="Partido de fútbol">
+                    <div class="play-icon">▶</div>
                 </div>
-            </section>
+                <h4>EDLP vs Gremio</h4>
+            </a>
+        </article>
+
+        <article class="video-card">
+            <a href="https://www.youtube.com/watch?v=VIDEO_ID_2" target="_blank">
+                <div class="thumbnail-wrapper">
+                    <img src="https://picsum.photos/id/1040/600/400" alt="Jugadores celebrando">
+                    <div class="play-icon">▶</div>
+                </div>
+                <h4>CABJ vs RIV</h4>
+            </a>
+        </article>
+
+        <article class="video-card">
+            <a href="https://www.youtube.com/watch?v=VIDEO_ID_3" target="_blank">
+                <div class="thumbnail-wrapper">
+                    <img src="https://picsum.photos/id/1058/600/400" alt="Hinchada">
+                    <div class="play-icon">▶</div>
+                </div>
+                <h4>GELP vs Huracán</h4>
+            </a>
+        </article>
+
+    </div>
+</section>
 
             <section id="noticias" class="section-block">
                 <h3 class="section-title">NOTICIAS DESTACADAS</h3>
@@ -109,3 +119,4 @@
                     </div>
                     <div class="insta-item">
                         <img src="
+
