--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="video-grid">
         
         <article class="video-card">
-            <a href="https://youtu.be/rGTwyI89PWI?si=pDeX72ExIsp6jgCv" target="_blank">
+            <a href="https://youtu.be/rGTwyI89PWI?si=CRmcWqtPcgwnHwjs" target="_blank">
                 <div class="thumbnail-wrapper">
                     <img src="https://picsum.photos/id/1015/600/400" alt="Partido de fútbol">
                     <div class="play-icon">▶</div>
@@ -119,4 +119,5 @@
                     </div>
                     <div class="insta-item">
                         <img src="
+
 
