--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <div class="video-grid">
         
         <article class="video-card">
-            <a href="https://youtu.be/rGTwyI89PWI?si=CRmcWqtPcgwnHwjs" target="_blank">
+            <a href="https://www.youtube.com/live/Ed0Di-NpoQg?si=AM6AS7_ZIZ5RvV2o" target="_blank">
                 <div class="thumbnail-wrapper">
                     <img src="https://picsum.photos/id/1015/600/400" alt="Partido de fútbol">
                     <div class="play-icon">▶</div>
                 </div>
-                <h4>EDLP vs Gremio</h4>
+                <h4>Estudiantes vs Flamengo</h4>
             </a>
         </article>
 
@@ -119,5 +119,6 @@
                     </div>
                     <div class="insta-item">
                         <img src="
+
 
 
