--- a/index.html
+++ b/index.html
@@ -81,34 +81,12 @@
     </div>
 </section>
 
-            <section id="noticias" class="section-block">
-                <h3 class="section-title">NOTICIAS DESTACADAS</h3>
-                <div class="news-grid">
-                    <article class="news-card">
-                        <img src="https://picsum.photos/id/1069/400/300" alt="Entrenamiento" class="news-img">
-                        <div class="news-content">
-                            <h4>Mercado de pases: Altas y bajas</h4>
-                            <a href="#" class="btn-read-more">Leer más</a>
-                        </div>
-                    </article>
-                    <article class="news-card editorial">
-                        <div class="editorial-img-wrapper">
-                            <img src="https://picsum.photos/id/1011/400/300" alt="Micrófono de radio" class="news-img illustration">
-                        </div>
-                        <div class="news-content">
-                            <h4>Opinión: El rol de las SAD</h4>
-                            <a href="#" class="btn-read-more">Leer más</a>
-                        </div>
-                    </article>
-                    <article class="news-card">
-                        <img src="https://picsum.photos/id/1080/400/300" alt="Fútbol juvenil" class="news-img">
-                        <div class="news-content">
-                            <h4>La reserva gana y gusta</h4>
-                            <a href="#" class="btn-read-more">Leer más</a>
-                        </div>
-                    </article>
-                </div>
-            </section>
+           <section id="noticias" class="section-block">
+    <h3 class="section-title">NOTICIAS DESTACADAS</h3>
+    
+    <div class="news-grid" id="contenedor-noticias"></div>
+
+</section>
 
             <section id="entrevistas" class="section-block">
                 <h3 class="section-title">LOS RELATOS DEL FIN DE SEMANA <span class="social-icon">Instagram</span></h3>
@@ -119,6 +97,7 @@
                     </div>
                     <div class="insta-item">
                         <img src="
+
 
 
 
