--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
     </div>
 </section>
 
-           <section id="noticias" class="section-block">
+          <section id="noticias" class="section-block">
     <h3 class="section-title">NOTICIAS DESTACADAS</h3>
     
-    <div class="news-grid" id="contenedor-noticias"></div>
+    <div class="news-grid" id="contenedor-noticias">
+        </div>
 
 </section>
 
@@ -97,6 +98,7 @@
                     </div>
                     <div class="insta-item">
                         <img src="
+
 
 
 
