--- a/index.html
+++ b/index.html
@@ -90,14 +90,59 @@
 </section>
 
             <section id="entrevistas" class="section-block">
-                <h3 class="section-title">LOS RELATOS DEL FIN DE SEMANA <span class="social-icon">Instagram</span></h3>
-                <div class="insta-grid">
-                    <div class="insta-item">
-                        <img src="https://picsum.photos/id/117/300/500" alt="Reel vertical">
-                        <div class="mini-play">▶</div>
-                    </div>
-                    <div class="insta-item">
-                        <img src="
+            <h3 class="section-title">LOS RELATOS DEL FIN DE SEMANA <span class="social-icon">Instagram</span></h3>
+            <div class="insta-grid">
+                <div class="insta-item">
+                    <img src="https://picsum.photos/id/117/300/500" alt="Reel vertical">
+                    <div class="mini-play">▶</div>
+                </div>
+                <div class="insta-item">
+                    <img src="https://picsum.photos/id/152/300/500" alt="Reel vertical">
+                    <div class="mini-play">▶</div>
+                </div>
+                <div class="insta-item">
+                    <img src="https://picsum.photos/id/160/300/500" alt="Reel vertical">
+                    <div class="mini-play">▶</div>
+                </div>
+                <div class="insta-item">
+                    <img src="https://picsum.photos/id/177/300/500" alt="Reel vertical">
+                    <div class="mini-play">▶</div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <aside class="sidebar-right">
+        <div class="sidebar-card">
+            <h3 class="sidebar-title">PRÓXIMOS PARTIDOS</h3>
+            <ul class="match-list">
+                <li class="match-item">
+                    <div class="teams">EDLP vs Gremio</div>
+                    <div class="date">Mar 21:00 <span class="live-dot"></span></div>
+                </li>
+                <li class="match-item">
+                    <div class="teams">GELP vs Boca</div>
+                    <div class="date">Dom 17:00</div>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="ad-space">
+            <p>ESPACIO PUBLICITARIO</p>
+        </div>
+    </aside>
+
+</div>
+
+<footer class="main-footer">
+    <p>&copy; 2025 Táctico Play. Medio periodístico aliado a FM Alta Voz 98.7</p>
+</footer>
+
+<script src="script.js"></script>
+
+</body>
+</html>
 
 
 
