--- a/index.html
+++ b/index.html
@@ -149,6 +149,16 @@
             </div>
     </div>
 </div>
+    <div id="modal-noticia" class="modal-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:9999; justify-content:center; align-items:center; padding:20px;">
+    <div class="modal-content" style="background:#14261b; width:100%; max-width:800px; max-height:90vh; overflow-y:auto; border-radius:12px; padding:30px; border:1px solid #2ecc71; position:relative;">
+        <span onclick="cerrarNoticia()" style="position:absolute; top:15px; right:20px; font-size:30px; color:white; cursor:pointer;">&times;</span>
+        <img id="modal-img" src="" style="width:100%; height:300px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
+        <span id="modal-tag" style="color:#2ecc71; font-weight:800; text-transform:uppercase;">CATEGORIA</span>
+        <h2 id="modal-titulo" style="font-size:2rem; margin:10px 0; line-height:1.2;">Titulo</h2>
+        <p id="modal-autor" style="color:#b0c4b1; font-style:italic; margin-bottom:20px; border-bottom:1px solid #333; padding-bottom:10px;">Autor</p>
+        <div id="modal-texto" style="color:#e0e0e0; font-size:1.1rem; line-height:1.6; white-space: pre-wrap;">Texto...</div>
+    </div>
+</div>
 <script src="script.js"></script>
 
 </body>
@@ -199,6 +209,7 @@ document.addEventListener('DOMContentLoaded', () => {
         })
         .catch(error => console.error('Error:', error));
 });
+
 
 
 
